PLF-6969 : fix broken UI of quick search results when there are Profiles in results

--- a/platform-ui-skin/src/main/webapp/skin/less/integration/skin/quicksearchpage.less
+++ b/platform-ui-skin/src/main/webapp/skin/less/integration/skin/quicksearchpage.less
@@ -67,12 +67,13 @@
     display: block;
     a {
         color: @textColor;
-        display: block;
+        display: inline-block;
+        box-sizing: border-box;
         padding: 5px 10px 7px;
-        width: auto;
+        width: 100%;
         height: auto;
     }
-    .avatarTiny > img {
+    img.avatarTiny {
     	margin-right: 5px;
     }
   }
